	* Dock area state is now remembered across sessions (unless opened automatically, for multiple files on command line)
	* Unmaximized window position and size are now remembered across sessions
	* Alpha values for colours A & B are now displayed on settings toolbar when editing image with alpha in coupled alpha mode
	* Undo system now uses a bit less memory
	* Initial undo memory size is now 1/4 of available memory
	* Support for compiling with giflib 5, libpng 1.6, libjpeg 9, OpenJPEG 2.3 added
	* Compilation now works using gcc-5.5 and GTK+1
	* Compilation now works using gcc-10
	* BUGFIX - Compilation without JPEG and TIFF support now works again
	* BUGFIX - FreeType text tool now skips directory loops when scanning font directories
	* BUGFIX - Geometry info on the status bar now correctly updates after arrow keys or Escape key
	* BUGFIX - Gradient button no longer fails to show current gradient mode after showing settings toolbar
	* BUGFIX - Preview of Transform Colour no longer ignores area within paste marquee
	* BUGFIX - Ctrl+left/right/double click now set both colour and alpha from canvas in coupled alpha mode, as they should
	* BUGFIX - New image creation from system clipboard now respects "Undoable" toggle
	* BUGFIX - Problem with layers list in inactive dock tab sometimes not updating is now eliminated
	* BUGFIX - All keyboard shortcuts now work in Image View mode, as they should
	* BUGFIX - Transparent colour in composite images now works again
	* BUGFIX - Flood fill with shapeburst gradient now works again
	* BUGFIX - Flood fill with pattern now works when starting on colour A
	* BUGFIX - Saving LSS16 images no longer produces broken files in certain rare cases
	* BUGFIX - Trying to load a broken LSS16 file (truncated to header or less) no longer causes crash
	* BUGFIX - Loading certain broken BMP files no longer causes crash