@@ -236,6 +236,7 @@ enum {
 	MENU_SCRIPT8,
 	MENU_SCRIPT9,
 	MENU_SCRIPT10,
+	MENU_SCRIPTC,
 	MENU_TBSET,
 	MENU_VIEW,
 	MENU_LAYER,
